kubernetes/apps/dawarich/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dawarich
  labels:
    pod-security.kubernetes.io/enforce: restricted
