kubernetes/apps/dawarich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dawarich
  namespace: dawarich
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-internal-wildcard
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-app-wildcard
  hostnames:
    - dawarich.${CLUSTER_DOMAIN}
    - dawarich.${PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dawarich
          port: 3000
